# spt-lsp

./: .clang-format  .gitignore  CMakeLists.txt  LangLexer.g4  LangParser.g4  README.md  gen.sh
client/: language-configuration.json  package-lock.json  package.json  tsconfig.json
client/snippets/: sptscript.json
client/src/: extension.ts
client/syntaxes/: sptscript.tmLanguage.json
include/: diagnostics.h  document_manager.h  lsp_server.h  parser_engine.h  protocol_types.h  semantic_analyzer_visitor.h  semantic_info.h  sptscript_analyzer.h  uri.h
runtime/: CMakeLists.txt
runtime/src/: Token.h
runtime/src/atn/: ProfilingATNSimulator.cpp
src/: AstFactory.h  AstNodes.h  LineOffsetTable.h  LspLogger.h  LspService.cpp  LspService.h  NodeFinder.h  Scope.h  SemanticAnalyzer.h  SourceFile.h  Symbol.h  TolerantAstBuilder.h  TolerantAstBuilderImpl.h  TypeSystem.h  Workspace.h  document_manager.cpp  lsp_server.cpp  main.cpp  parser_engine.cpp  semantic_info.cpp  sptscript_analysis.cpp  symbol_table.cpp
test/: a.spt  b.spt
